kubernetes/portalwebsite-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portal-website-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.feriva22.me"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: feriva22-me-domain-prod
    hosts:
    - "www.feriva22.me"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portal-website
spec:
  hosts:
  - "www.feriva22.me"
  gateways:
  - portal-website-gateway
  http:
  - route:
    - destination:
        host: portal-website
        port:
          number: 3000
